Latest commit with Receiver, Broadcast, and Layout changes

--- a/Aquarium/AndroidManifest.xml
+++ b/Aquarium/AndroidManifest.xml
@@ -17,9 +17,9 @@
             android:name="edu.fau.group6.ecoscapes.aquarium.TankActivity"
             android:label="@string/app_name" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
+                <action android:name="android.intent.action.MAIN" />	
                 <category android:name="android.intent.category.LAUNCHER" />
+                 
             </intent-filter>
         </activity>
         <activity
@@ -50,6 +50,13 @@
             android:name="edu.fau.group6.ecoscapes.aquarium.blindcave.BlindCaveTank"
             android:label="@string/title_activity_blind_cave_tank" >
         </activity>
+
+        <receiver android:name="MyReceiver">
+            <intent-filter>
+                <action android:name="mods.ecoscapes.AQUARIUM_INTENT" >
+                </action>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
